<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="news">New features</string>
    <string name="news_message">\n■ Layout changes of the Settings dialogue.
    </string>
    <string-array name="about_contributors">
        <item>Lukáš Kettner, OK Kamenice</item>
    </string-array>
    <string name="app_name" translatable="false">SI-Droid Connector</string>
    <string name="app_title_ofeed_connector" translatable="false">OFeed Connector</string>
    <string name="app_title_oresults_connector" translatable="false">OResults Connector</string>
    <string name="ofeed" translatable="false">OFeed</string>
    <string name="si_droid" translatable="false">SI-Droid Event</string>
    <string name="about">About</string>
    <string name="clear_ofeed">Clear OFeed</string>
    <string name="cleared_ok">Cleared OK</string>
    <string name="contributors">Contributors</string>
    <string name="do_not_show_again">Don\'t show this again</string>
    <string name="license">License</string>
    <string name="no_results_to_upload">No results to upload.</string>
    <string name="paste_link">Paste link</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="start_uploading">Start uploading</string>
    <string name="stop_uploading">Stop uploading</string>
    <string name="update">Update</string>
    <string name="upload_interval">Upload interval</string>
    <string name="upload_file">Upload file</string>
    <string name="uploads">Uploads</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="back_button_exit_confirmation">Stop uploading and exit?
        \nTap <b>Home</b> to leave app and continue uploading.
    </string>
    <string name="port_number">Port number</string>
    <string name="port_number_error">Port number must be between 1025 and 65535.</string>
    <string name="port_number_help">The port number is defined by SI-Droid Event.
        Open that app and select <b>Settings</b> → <b>Result Service</b> → <b>Result Service Port</b>.
        \n\nAlso make sure that <b>Use the builtin result service</b> is enabled.
    </string>
    <string name="ofeed_settings_updated_ok">OFeed settings updated.</string>
    <string name="server_not_specified">Server not specified.</string>
    <string name="server_incorrect_url">Incorrect server address (URL).</string>
    <string name="server_incorrect_path">Incorrect path. Server URL must end with <i>/rest/v1/events</i></string>
    <string name="server_https_required">https required.</string>
    <string name="server_help">OFeed server address (URL):
        \n■ Default <i>https://api.orienteerfeed.com/rest/v1/events</i>
        \n■ <i>api.orienteerfeed.com</i> → default
        \n■ <i>xxx.yyy.zzz</i> → <i>https://xxx.yyy.zzz/rest/v1/events</i>
        \n■ Path must be <i>/rest/v1/events</i>
        \n■ Android requires <i>https</i>
    </string>
    <string name="event_id">Event id</string>
    <string name="event_id_is_missing">Event id is missing.</string>
    <string name="password">Password</string>
    <string name="password_is_missing">Password is missing.</string>
    <string name="qr_code_scan">Scan QR</string>
    <string name="qr_code_scanner">QR code scanner</string>
    <string name="qr_code_scan_failed">The scanning failed.</string>
    <string name="qr_code_invalid">Invalid QR code.</string>
    <string name="qr_code_start">Must start with\n■ https://stigning.se/ofeed or\n■ https://stigning.se/connector.</string>
    <string name="ofeed_link_invalid">Invalid OFeed link.</string>
    <string name="clipboard_is_empty">Clipboard is empty.</string>
    <string name="timeouts" tools:ignore="MissingTranslation">Timeouts</string>
    <string name="http_timeouts" tools:ignore="MissingTranslation">HTTP timeouts</string>
    <string name="http_timeouts_help" tools:ignore="MissingTranslation">Timeouts in seconds. Zero means no timeout.</string>
    <string name="http_timeouts_defaults_help" tools:ignore="MissingTranslation">Reset timeouts to default values.</string>
    <string name="http_timeout_connect" tools:ignore="MissingTranslation">Connect timeout</string>
    <string name="http_timeout_connect_help" tools:ignore="MissingTranslation">Max time period to establish a connection with host.</string>
    <string name="http_timeout_read" tools:ignore="MissingTranslation">Read timeout</string>
    <string name="http_timeout_read_help" tools:ignore="MissingTranslation">Max time between two data packets when waiting for server\'s response.</string>
    <string name="http_timeout_write" tools:ignore="MissingTranslation">Write timeout</string>
    <string name="http_timeout_write_help" tools:ignore="MissingTranslation">Max time between two data packets when sending request to server.</string>
    <string name="http_timeout_call" tools:ignore="MissingTranslation">Call timeout</string>
    <string name="http_timeout_call_help" tools:ignore="MissingTranslation">Time limit for a complete call.</string>
    <string name="create_xml_id">Create XML id</string>
    <string name="xml_id_help">The uploaded results list will be updated with a unique id for each competitor.
        \n\nThis XML id tag is formed from each competitor\'s name and SI card.
        The combination of \"FamilyName + GivenName + SICard\" may only appear once in the event.
        \n\nShould normally be enabled. Uncheck to <b>not</b> modify the results list.
    </string>
    <string name="clear_ofeed_competitors">This will delete all competitors of this event in OFeed.
        \n\nThis cleanup can be used if duplicates have appeared in OFeed.
        The next upload will restore the competitors.
        \n\n<b>Cannot be undone!</b>
    </string>
    <string name="login_details_help">Login details are required to access OFeed.
        Server address, event id and password can be entered in various ways:
        \n\n<b>Scan QR code</b>
        \n■ Open the camera on your device and point it at the QR code. Tap on the popup link.
        The app will now start with your login details filled in.
        \n■ The QR code can also be scanned from the app\'s Settings.
        \n\n<b>Share link</b>
        \n■ Long press an OFeed link (text), select the entire link, then tap <i>Share</i>.
        In the share popup menu, tap on the app. The app will now start with your login details filled in.
        \n\n<b>Copy-paste link</b>
        \n■ Long press an OFeed link (text), select the entire link, then tap <i>Copy</i>.
        Manually launch the app, go to app\'s Settings, then tap <i>Paste link</i> to fill in the login details.
        \n\n<b>Manual setup</b>
        \n■ Enter the login details manually in the app\'s Settings.
    </string>
    <string name="oresults_api_key">Api key</string>
    <string name="oresults_api_key_is_missing">Api key is missing.</string>
    <string name="log">Log</string>
    <string name="show_log">Show log</string>
    <string name="show_http_log">HTTP log</string>
    <string name="log_is_empty">Log is empty.</string>
    <string name="status">Status</string>
    <string name="status_running">Running OK</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_not_configured">Not configured</string>
    <string name="si_droid_unreachable_title">SI-Droid unreachable</string>
    <string name="si_droid_unreachable_message">Make sure that:
        \n■ SI-Droid Event is running.
        \n■ Its <i>Result Service</i> is enabled.
        \n■ Its port number matches this app\'s settings.
        \n\n<b>Troubleshooting</b>
        \nIf a service stops unexpectedly, check Android\'s
        Settings → Apps → <i>App Name</i> → Battery → <b>Unrestricted</b> or <b>Allow background usage</b>
        (or similar wording).
    </string>
    <string name="si_droid_get_request" translatable="false">Connector → SI-Droid.</string>
    <string name="si_droid_results_retrieved" translatable="false">Connector ← SI-Droid.</string>
    <string name="si_droid_no_results">No results ← SI-Droid.</string>
    <string name="ofeed_post_request" translatable="false">Connector → OFeed.</string>
    <string name="oresults_post_request" translatable="false">Connector → OResults.</string>
    <string name="uploaded_ok">Uploaded OK.</string>
    <string name="upload_failed">Failed.</string>
    <string name="help_title">Help</string>
    <string name="help_message">This app retrieves results lists from SI-Droid Event
        and uploads them to OFeed or OResults.
        \n\nIt can also upload a results list from the local storage of the device.
        \n\nThe uploaded results list can be updated with a unique id for each competitor.
    </string>
    <string name="battery_restriction_title">Battery restriction</string>
    <string name="battery_restriction">Android battery restriction is enabled for this app.
        This can cause the uploading of results to stop.
        \n\nDisable battery restriction?
        \n\nThis will launch Android\'s settings for this app, where you can enable
        Battery → <b>Allow background usage</b> or <b>Unrestricted</b> (or similar wording).
    </string>
    <string name="notification_title">Connector service</string>
    <string name="notification_text">SI-Droid Connector upload service</string>
    <string name="notifications_permission_title">Android permission</string>
    <string name="notifications_permission_message">Please allow the notification icon to be displayed.
        It indicates that the app\'s upload service is running.
    </string>
    <string name="notifications_permission_not_granted">The notification icon will not be displayed.
        The upload service will still run.
    </string>
    <string name="update_title">App update</string>
    <string name="update_available">A new version is available.\n\nDownload and install from Google Play Store?</string>
    <string name="update_ok">Update completed OK.</string>
    <string name="update_canceled">Update cancelled.</string>
    <string name="update_failed">Update failed.</string>
    <string name="update_postpone_one_week">Postpone one week</string>
    <string name="license_apache" translatable="false">Apache 2.0</string>
    <string name="license_ok_http" translatable="false"><b>Open Source License</b>
        \nThis application uses the following open-source software:
        \n\n<b>OkHttp</b>
        \nCopyright © 2019 Square, Inc.
        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at:
        \n\nhttp://www.apache.org/licenses/LICENSE-2.0
        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
</resources>