<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools" >

    <!--
    ********************************************************************************************
    * O Feed settings.
    ******************************************************************************************** -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        tools:ignore="ContentDescription" >

        <!--
        ********************************************************************************************
        * General settings.
        ******************************************************************************************** -->
        <TextView
            android:id="@+id/settings_upload_interval_title"
            style="@style/medium_bold_wrap_content"
            android:text="@string/upload_interval"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/settings_upload_interval"
            style="@style/button_style"
            android:layout_marginTop="8dp"
            android:text="30 sec"
            tools:ignore="HardcodedText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_upload_interval_title" />
        <Button
            android:id="@+id/settings_upload_http_timeouts"
            style="@style/button_style"
            android:text="@string/timeouts"
            app:layout_constraintStart_toEndOf="@+id/settings_upload_interval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/settings_upload_interval" />

        <TextView
            android:id="@+id/settings_create_xml_id_caption"
            style="@style/medium_bold_wrap_content"
            android:text="@string/create_xml_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_create_xml_id"
            app:layout_constraintBottom_toBottomOf="@id/settings_create_xml_id" />
        <ImageView
            android:id="@+id/settings_create_xml_id"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/check_box_toggle"
            app:layout_constraintStart_toEndOf="@id/settings_captions_barrier"
            app:layout_constraintTop_toBottomOf="@id/settings_upload_interval" />
        <ImageView
            android:id="@+id/settings_create_xml_id_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/help"
            app:layout_constraintStart_toEndOf="@id/settings_create_xml_id"
            app:layout_constraintTop_toTopOf="@id/settings_create_xml_id"
            app:layout_constraintBottom_toBottomOf="@id/settings_create_xml_id" />

        <!--
        ********************************************************************************************
        * SI-Droid settings.
        ******************************************************************************************** -->
        <TextView
            android:id="@+id/settings_si_droid_title"
            style="@style/medium_bold_wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/si_droid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/settings_si_droid_port" />

        <EditText
            android:id="@+id/settings_si_droid_port"
            style="@style/medium_0_wrap"
            android:layout_marginTop="16dp"
            android:ellipsize="none"
            android:inputType="number"
            android:hint="@string/port_number"
            android:singleLine="true"
            android:importantForAutofill="no"
            app:layout_constraintStart_toEndOf="@id/settings_captions_barrier"
            app:layout_constraintEnd_toStartOf="@id/settings_si_droid_port_help"
            app:layout_constraintTop_toBottomOf="@id/settings_create_xml_id" /> />
        <ImageView
            android:id="@+id/settings_si_droid_port_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_si_droid_port"
            app:layout_constraintBottom_toBottomOf="@id/settings_si_droid_port" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/settings_captions_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierMargin="16dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="settings_create_xml_id_caption,settings_si_droid_title" />

        <!--
        ********************************************************************************************
        * OFeed settings.
        ******************************************************************************************** -->
        <TextView
            android:id="@+id/settings_ofeed_title"
            style="@style/medium_bold_wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ofeed"
            app:drawableStartCompat="@drawable/ofeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_si_droid_port" />
        <View
            android:id="@+id/settings_ofeed_selected"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/settings_ofeed_title"
            app:layout_constraintEnd_toEndOf="@id/settings_ofeed_title"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_title" />

        <EditText
            android:id="@+id/settings_ofeed_server"
            style="@style/medium_0_wrap"
            android:layout_marginTop="8dp"
            android:ellipsize="none"
            android:inputType="textMultiLine|textNoSuggestions"
            android:hint="api.orienteerfeed.com"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_ofeed_server_help"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_selected" />
        <ImageView
            android:id="@+id/settings_ofeed_server_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_ofeed_server"
            app:layout_constraintBottom_toBottomOf="@id/settings_ofeed_server" />
        <EditText
            android:id="@+id/settings_ofeed_event_id"
            style="@style/medium_0_wrap"
            android:ellipsize="none"
            android:inputType="textMultiLine|textNoSuggestions"
            android:hint="@string/event_id"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_ofeed_server_help"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_server" />
        <EditText
            android:id="@+id/settings_ofeed_event_password"
            style="@style/medium_0_wrap"
            android:ellipsize="none"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_ofeed_password_visibility"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_event_id" />
        <ImageView
            android:id="@+id/settings_ofeed_password_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/visibility_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_ofeed_event_password"
            app:layout_constraintBottom_toBottomOf="@id/settings_ofeed_event_password" />

        <Button
            android:id="@+id/settings_ofeed_scan_qr_code"
            style="@style/button_style"
            android:layout_marginTop="8dp"
            android:text="@string/qr_code_scan"
            tools:ignore="RtlHardcoded"
            android:drawablePadding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_event_password" />
        <Button
            android:id="@+id/settings_ofeed_paste_link"
            style="@style/button_style"
            android:text="@string/paste_link"
            tools:ignore="RtlHardcoded"
            android:drawablePadding="8dp"
            app:layout_constraintStart_toEndOf="@id/settings_ofeed_scan_qr_code"
            app:layout_constraintEnd_toStartOf="@+id/settings_ofeed_login_details_help"
            app:layout_constraintBaseline_toBaselineOf="@id/settings_ofeed_scan_qr_code" />
        <ImageView
            android:id="@+id/settings_ofeed_login_details_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_ofeed_paste_link"
            app:layout_constraintBottom_toBottomOf="@id/settings_ofeed_paste_link" />

        <!--
        ********************************************************************************************
        * OResults settings.
        ******************************************************************************************** -->
        <TextView
            android:id="@+id/settings_oresults_title"
            style="@style/medium_bold_wrap_content"
            android:layout_marginStart="16dp"
            android:text="Results"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/oresults"
            android:drawablePadding="2dp"
            app:layout_constraintStart_toEndOf="@id/settings_ofeed_title"
            app:layout_constraintBottom_toBottomOf="@id/settings_ofeed_title" />
        <View
            android:id="@+id/settings_oresults_selected"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="11dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/settings_oresults_title"
            app:layout_constraintEnd_toEndOf="@id/settings_oresults_title"
            app:layout_constraintTop_toBottomOf="@id/settings_oresults_title" />
        <EditText
            android:id="@+id/settings_oresults_api_key"
            style="@style/medium_0_wrap"
            android:layout_marginTop="8dp"
            android:ellipsize="none"
            android:inputType="textMultiLine|textNoSuggestions"
            android:hint="@string/oresults_api_key"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_ofeed_server_help"
            app:layout_constraintTop_toBottomOf="@id/settings_ofeed_selected" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
